# adamo-nvidia-isaac-teleop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  isaacsim_teleop.py  openarm_teleop.py
src/adamo_isaac_teleop/: __init__.py  cdr.py  device.py  receiver.py  retarget.py  sender.py
tests/: conftest.py  test_cdr.py  test_device.py
